--- a/Reversi.Core/Reversi.Core.csproj
+++ b/Reversi.Core/Reversi.Core.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MatchRecord.cs" />
     <Compile Include="TypeDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReversiBoard.cs" />
