--- a/RandomEngine/RandomEngine.csproj
+++ b/RandomEngine/RandomEngine.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5481189B-AE5A-4863-A1D2-E3A4F076AB48}</ProjectGuid>
+    <ProjectGuid>{0096D74D-68AD-4D2B-A380-52553B041F5E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Reversi.Core</RootNamespace>
-    <AssemblyName>Reversi.Core</AssemblyName>
+    <RootNamespace>RandomEngine</RootNamespace>
+    <AssemblyName>RandomEngine</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -42,11 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MatchRecord.cs" />
-    <Compile Include="ReversiMove.cs" />
-    <Compile Include="TypeDefinition.cs" />
+    <Compile Include="RandomEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReversiBoard.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Reversi.Core\Reversi.Core.csproj">
+      <Project>{5481189b-ae5a-4863-a1d2-e3a4f076ab48}</Project>
+      <Name>Reversi.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ThinkingEngineBase\ThinkingEngineBase.csproj">
+      <Project>{190b69fd-f1eb-4d2e-9f04-b4252dea33f5}</Project>
+      <Name>ThinkingEngineBase</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
