--- a/Reversi.GUI/Reversi.GUI.csproj
+++ b/Reversi.GUI/Reversi.GUI.csproj
@@ -53,6 +53,13 @@
     <Compile Include="Block.designer.cs">
       <DependentUpon>Block.cs</DependentUpon>
     </Compile>
+    <Compile Include="EngineDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EngineDialog.Designer.cs">
+      <DependentUpon>EngineDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EngineManager.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +77,9 @@
     <Compile Include="VersionInfo.cs" />
     <EmbeddedResource Include="Block.resx">
       <DependentUpon>Block.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EngineDialog.resx">
+      <DependentUpon>EngineDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -107,10 +117,6 @@
     <None Include="Resources\black_stone.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RandomEngine\RandomEngine.csproj">
-      <Project>{0096d74d-68ad-4d2b-a380-52553b041f5e}</Project>
-      <Name>RandomEngine</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Reversi.Core\Reversi.Core.csproj">
       <Project>{5481189b-ae5a-4863-a1d2-e3a4f076ab48}</Project>
       <Name>Reversi.Core</Name>
