--- a/EvalEngine/EvalEngine.csproj
+++ b/EvalEngine/EvalEngine.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{76C9BFD7-20E4-4F78-853D-E386C31FB26D}</ProjectGuid>
+    <ProjectGuid>{00C480FB-C69C-47AF-8DDC-2DC965B63BDE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EvalAndSearchEngine</RootNamespace>
-    <AssemblyName>EvalAndSearchEngine</AssemblyName>
+    <RootNamespace>EvalEngine</RootNamespace>
+    <AssemblyName>EvalEngine</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,9 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Reversi.Core">
+      <HintPath>..\binary\Reversi.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,21 +42,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="ThinkingEngineBase">
+      <HintPath>..\binary\ThinkingEngineBase.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CountingEngine.cs" />
-    <Compile Include="SuperCounting.cs" />
+    <Compile Include="Eval.cs" />
+    <Compile Include="EvalEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Reversi.Core\Reversi.Core.csproj">
-      <Project>{5481189b-ae5a-4863-a1d2-e3a4f076ab48}</Project>
-      <Name>Reversi.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ThinkingEngineBase\ThinkingEngineBase.csproj">
-      <Project>{190b69fd-f1eb-4d2e-9f04-b4252dea33f5}</Project>
-      <Name>ThinkingEngineBase</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
