Minmaxによるエンジンを追加

--- a/Reversi.GUI/Reversi.GUI.csproj
+++ b/Reversi.GUI/Reversi.GUI.csproj
@@ -60,6 +60,7 @@
       <DependentUpon>EngineDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="EngineManager.cs" />
+    <Compile Include="EnginePath.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,9 +98,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="debug.log">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -128,11 +126,6 @@
       <Project>{190b69fd-f1eb-4d2e-9f04-b4252dea33f5}</Project>
       <Name>ThinkingEngineBase</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="engines.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
